[metadata]
name = polybounce
description = My debut to pygame and pymunk
author = Johnny Wannamaker
version = 0.0.0
license = MIT
license_file = LICENSE
platforms = osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    cffi>=1.16.0
    numpy>=1.26.4
    pycparser>=2.21
    pygame-ce>=2.4.1
    pymunk>=6.6.0
    wcwidth>=0.2.13
python_requires =
    >=3.11
package_dir =
    =src
zipping_safe =
    no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0

[options.package_data]
polybounce = py.typed
